feat: complete User entity with JWT authentication and profile management
- Add BCrypt password encryption on user registration
- Add AuthController with POST /auth/login endpoint
- Add AuthService with JWT token generation on login
- Add LoginRequestDTO and LoginResponseDTO with Swagger documentation
- Add UserUpdateDTO for profile updates
- Add GET /users/me, PUT /users/me and DELETE /users/me endpoints
- Update SecurityConfig with JWT filter, BCrypt and route permissions
- Update UserService with update and delete methods